2010-09-24  MIYAMUKO Katsuyuki

	* api/gist-unofficial.l (list-all-gists, scan-gist-list): All Gists の
	場合でも、次のページ番号を返すようにした。

2010-09-22  MIYAMUKO Katsuyuki

	* api/gist-filetype.l, api/types.l: guess-gist-filetype を追加。
	指定したバッファの言語を推測する。

	* api/gist-filetype.l (gist-filetype-names, gist-filetype-exts):
	Gist の言語名の一覧と拡張子の一覧を取得する

	* api/types.l (gist-home-url): Gist のホームページの URL を返す関数
	を追加。

	* 関数名を変更。coerce-user-name => coerce-user-login

	* api/types.l: url を返す関数には構造体以外にも id などを
	指定できるようにした。
	(repo-github-issues-url "miyamuko/xl-github")
	;=> "http://github.com/miyamuko/xl-github/issues"

	* api/types.l: gist-public-clone-url などが動いていなかったのを修正。

2010-09-21  MIYAMUKO Katsuyuki

	* api/types.l (public-key): public-key 構造体の key スロットの名前を body に変更。
	public-key-key => public-key-body

	* util/struct.l (struct-slot-accessor): export-struct でエラーになっていたのを修正
	スロット名をキーワードじゃなくて構造体名のシンボルが
	所属するパッケージに intern するようにした。

2010-09-06  MIYAMUKO Katsuyuki

	* api/base.l (with-credential): 一時的に github の user と token
	を切り替えるためのマクロ

	* api/base.l (refresh-credential): git config を変更した場合に
	キャッシュをクリアするための関数を追加

	* api/base.l (get-credential-login): git config の github.user を
	取得する関数を export

2010-09-03  MIYAMUKO Katsuyuki

	* utils/pubkey.l, api/base.l, api/user.l, api/repo.l: ファイルから公開鍵を登録できるようにした
	- add-repo-key-file
	- add-user-key-file
	以下の公開鍵のフォーマットをサポートする
	- RFC 4716 形式のファイル (puttygen などで生成した公開鍵)
	- OpenSSH 形式 (authorized_keys に書く形式、puttygen でも変換可能)

	* api/types.l: GitHub の URL を返す API を追加

	* user/repo => owner/repo

	* 引数の型チェックを追加

	* api/issues.l, api/types.l: 引数名を変更: number => issue

	* api/issues.l (add-issue-label, delete-issue-label): 引数の順番を変更

2010-09-02  MIYAMUKO Katsuyuki

	* user と repo 引数にとる関数の引数を変更して以下を引数に取るようにした
	- "<user>/<repo>" という文字列
	- '("<user>" "<repo>") というリスト
	- repo 構造体

	* api/issues.l, api/types.l: issue number を引数にとる関数には
	issue 構造体も指定できるようにした。

	* api/user.l, api/repo.l, api/types.l: public-key id を引数にとる関数には
	public-key 構造体も指定できるようにした。
